commit-link-to-l3-v1

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <li><a href="https://vk.com/id152831715">ВК</a></li>
                     <li><a href="https://t.me/StarTM98">Телеграмм</a></li>
                     <li><a href="mailto:alexnikonov236@gmail.com">Почта гугл</a></li>
-                </ul> <hr>
+                </ul><hr>
+                <a href="lesson-3/index.html">Lesson-3</a>
             </h1>
         </body>
     </html>
