--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -9,7 +9,7 @@
 <body>
     <header><h1>My product list</h1></header>
     <main>
-        <h2>
+        <div>    
             <fieldset>
                 <legend>My vegetables</legend>
                 <ol>
@@ -48,20 +48,20 @@
                     <br><label for="charity">Maby you want some charity?</label>
                     <input type="checkbox" name="charity" id="charity">
             </fieldset>
-        </h2>
+        </div>
     </main>
-    <footer><h3>Choose a payment method for goods
-                <select>
-                    <option>Credit card</option>
-                    <option>PayPal</option>
-                    <option>Cash</option>
-                    <option hidden disabled selected>Choose one</option>
-                </select><br>
-                    <label for="submit">Confrim products list</label>
-                    <input type="checkbox" name="my-products" id="submit">and
-                    <input type="submit" value="Buy"><hr>
-                    <a href="links-doc/index.html" target="_blank">Task #2</a>
-            </h3>
+        <h2>Choose a payment method for goods</h2>    
+            <select>
+                <option>Credit card</option>
+                <option>PayPal</option>
+                <option>Cash</option>
+                <option hidden disabled selected>Choose one</option>
+            </select><br>
+            <label for="submit">Confrim products list</label>
+            <input type="checkbox" name="my-products" id="submit">and
+            <input type="submit" value="Submit"><hr>
+    <footer>            
+        <a href="links-doc/index.html" target="_blank">Task #2</a>
     </footer>
 </body>
 </html>
