--- a/lesson-3/links-doc/index.html
+++ b/lesson-3/links-doc/index.html
@@ -7,16 +7,17 @@
     <title>Lesson-3-HTML5/Task#2</title>
 </head>
 <body>
-    <h1>Адреса Интернета
-        <ol>
-            <li><a href="page.html#h1" target="blank">Введение</a></li>
-            <li><a href="page.html#h2" target="blank">Универсальные идентификаторы</a></li>
-            <li><a href="page.html#h3" target="blank">Три основных класса IP-адресов</a></li>
-            <li><a href="page.html#h4" target="blank">Адреа описывают сетевые соединения</a></li>
-            <li><a href="page.html#h5" target="blank">Сетевые и широковещательные адреса</a></li>
-            <li><a href="page.html#h6" target="blank">Ограниченное широковещание</a></li>
-        </ol>
-        <a href="../index.html" target="_blank">Task #1</a>
-    </h1>
+    <h1>Адреса Интернета</h1>
+       <p>
+            <ol>
+                <li><a href="page.html#h1" target="blank">Введение</a></li>
+                <li><a href="page.html#h2" target="blank">Универсальные идентификаторы</a></li>
+                <li><a href="page.html#h3" target="blank">Три основных класса IP-адресов</a></li>
+                <li><a href="page.html#h4" target="blank">Адреа описывают сетевые соединения</a></li>
+                <li><a href="page.html#h5" target="blank">Сетевые и широковещательные адреса</a></li>
+                <li><a href="page.html#h6" target="blank">Ограниченное широковещание</a></li>
+            </ol>
+            <a href="../index.html" target="_blank">Task #1</a>
+        </p>
 </body>
 </html>
