--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
-    <html lang="ru">
-        <head>
-            <meta charset="UTF-8">
-            <title>
-                Резюме_рус_дз_1
-            </title>
-        </head>
-        <body>
-            <hr>
-            <img src="photo.jpg"  width="175" height="250" alt="А все, нема фото :("> <br>
-            <h1>
-                <ul>Резюме 
-                    <li>Личные качества:<br>
-                        <p><i>Старательный, дисциплинированный, трудолюбивый, внимательный студент. Умеет планировать свою работу, выделять главное, осуществлять самоанализ. Учится в полную меру своих сил, проявляет интерес к выбранной специальности.
-                            Нравственные ценности сформированы, придерживается в отношениях с людьми таких ценностей, как забота, уважение, доверие, ответственность, уважение к правам человека, свободы выбора, забота об экологической безопасности, расовая и национальная терпимость и уважение к родителям и людям старшего возраста.
-                            Имеет много друзей и авторитет среди них.</i>
-                        </p>
-                    </li>
-                    <li>Хобби и увлечения:<br>
-                        <p><i>Футбол, настольный теннис, езда на велосипеде.</i></p>
-                    </li>
-                    <li>Образование и уровень английского:<br>
-                        <p><i>Аттестат про среднее образование. Диплом ХРТТ. Диплом ХНУРЭ. Уровень английского A2/B1 = Pre-Intermediate.</i></p>
-                    </li>
-                </ul> <hr>
-                <ul>Ссылки
-                    <li><a href="https://vk.com/id152831715">ВК</a></li>
-                    <li><a href="https://t.me/StarTM98">Телеграмм</a></li>
-                    <li><a href="mailto:alexnikonov236@gmail.com">Почта гугл</a></li>
-                </ul><hr>
-                <a href="lesson-3/index.html">Lesson-3</a>
-            </h1>
-        </body>
-    </html>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Резюме_рус_дз_1
+    </title>
+</head>
+
+<body>
+    <hr>
+    <img src="photo.jpg" width="175" height="250" alt="А все, нема фото :("> <br>
+    <div>
+        <h1>Резюме</h1>
+        <ul>
+            <li>Личные качества:<br>
+                <p><i>Старательный, дисциплинированный, трудолюбивый, внимательный студент. Умеет планировать свою
+                        работу, выделять главное, осуществлять самоанализ. Учится в полную меру своих сил, проявляет
+                        интерес к выбранной специальности.
+                        Нравственные ценности сформированы, придерживается в отношениях с людьми таких ценностей, как
+                        забота, уважение, доверие, ответственность, уважение к правам человека, свободы выбора, забота
+                        об экологической безопасности, расовая и национальная терпимость и уважение к родителям и людям
+                        старшего возраста.
+                        Имеет много друзей и авторитет среди них.</i>
+                </p>
+            </li>
+            <li>Хобби и увлечения:<br>
+                <p><i>Футбол, настольный теннис, езда на велосипеде.</i></p>
+            </li>
+            <li>Образование и уровень английского:<br>
+                <p><i>Аттестат про среднее образование. Диплом ХРТТ. Диплом ХНУРЭ. Уровень английского A2/B1 =
+                        Pre-Intermediate.</i></p>
+            </li>
+        </ul>
+        <hr>
+        <ul>Ссылки
+            <li><a href="https://vk.com/id152831715">ВК</a></li>
+            <li><a href="https://t.me/StarTM98">Телеграмм</a></li>
+            <li><a href="mailto:alexnikonov236@gmail.com">Почта гугл</a></li>
+        </ul>
+        <hr>
+        <ul>Задания
+            <li><a href="lesson-3/index.html" target="blanck">Занятие-3</a></li>
+            <li><a href="lesson-4/lesson-4-css-simple/index.html" target="blanck">Занятие-4-просто</a></li>
+            <li><a href="lesson-4/lesson-4-css-hard/index.html" target="blanck">Занятие-4-сложнее</a></li>
+        </ul><hr>
+    </div>
+</body>
+
+</html>
