--- a/lesson-4/lesson-4-css-hard/index.html
+++ b/lesson-4/lesson-4-css-hard/index.html
@@ -18,16 +18,22 @@
                     <img src="img/title.gif" alt="No photo, no party :(">
                 </div>
                 <nav id="nav">
-                    <div>
-                        <img class="img-h" src="img/img00.jpg" alt="No photo, no party :(">
-                        <img class="img-h" src="img/img01.jpg" alt="No photo, no party :(">
-                        <img class="img-h" src="img/img02.jpg" alt="No photo, no  party :(">
-                        <img class="img-h" src="img/img03.jpg" alt="No photo, no party :(">
-                        <div id="wrd-links">
-                            <a href="#" style="color: wheat; text-decoration: none">Home</a>
-                            <a class="link-i" href="#">About</a>
-                            <a class="link-i" href="#">Services</a>
-                            <a class="link-i" href="#">Contact</a>
+                    <div id="nav-d">
+                        <div class="img-d">
+                            <img class="img-h" src="img/img00.jpg" alt="No photo, no party :("><br>
+                            <a class="a-nav-d" href="#">Home</a>
+                        </div>
+                        <div class="img-d">
+                            <img class="img-h" src="img/img01.jpg" alt="No photo, no party :("><br>
+                            <a class="a-nav-d" href="#">About</a>
+                        </div>
+                        <div class="img-d">
+                            <img class="img-h" src="img/img02.jpg" alt="No photo, no  party :("><br>
+                            <a class="a-nav-d" href="#">Services</a>
+                        </div>
+                        <div class="img-d">
+                            <img class="img-h" src="img/img03.jpg" alt="No photo, no party :("><br>
+                            <a class="a-nav-d" href="#">Contact</a>
                         </div>
                     </div>
                 </nav>
@@ -89,7 +95,7 @@
                 </aside>
             </article>
             <div id="footer">
-                ©Copiright
+                ©Copyright
             </div>
         </main>
     </div>
