--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><a href="lesson-3/index.html" target="blanck">Занятие-3</a></li>
             <li><a href="lesson-4/lesson-4-css-simple/index.html" target="blanck">Занятие-4-просто</a></li>
             <li><a href="lesson-4/lesson-4-css-hard/index.html" target="blanck">Занятие-4-сложнее</a></li>
+            <li><a href="lesson-5/index.html" target="blanck">Занятие-5-первое+второе</a></li>
         </ul><hr>
     </div>
 </body>
