commit-l5+l6-css.box&font

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <li><a href="lesson-4/lesson-4-css-simple/index.html" target="blanck">Занятие-4-просто</a></li>
             <li><a href="lesson-4/lesson-4-css-hard/index.html" target="blanck">Занятие-4-сложнее</a></li>
             <li><a href="lesson-5/index.html" target="blanck">Занятие-5-первое+второе</a></li>
+            <li><a href="lesson-6/index.html" target="blanck">Занятие-6-первое+второе</a></li>
+            <li><a href="lesson-6/font-task/index.html" target="blanck">Занятие-6-шрифты</a></li>
         </ul><hr>
     </div>
 </body>
