--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <li><a href="lesson-5/index.html" target="blanck">Занятие-5-первое+второе</a></li>
             <li><a href="lesson-6/index.html" target="blanck">Занятие-6-первое+второе</a></li>
             <li><a href="lesson-6/font-task/index.html" target="blanck">Занятие-6-шрифты</a></li>
+            <li><a href="lesson-7/index.html" target="blanck">Занятие-7-флекс</a></li>
+            <li><a href="lesson-8/index.html" target="blanck">Занятие-8-позиционирование</a></li>
         </ul><hr>
     </div>
 </body>
