commit-ls9&10-all-v1

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <li><a href="lesson-6/font-task/index.html" target="blanck">Занятие-6-шрифты</a></li>
             <li><a href="lesson-7/index.html" target="blanck">Занятие-7-флекс</a></li>
             <li><a href="lesson-8/index.html" target="blanck">Занятие-8-позиционирование</a></li>
+            <li><a href="lesson-9/index.html" target="blanck">Занятие-9-БЭМ</a></li>
+            <li><a href="lesson-10/index.html" target="blanck">Занятие-10-формы</a></li>
         </ul><hr>
     </div>
 </body>
