--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a href="lesson-8/index.html" target="blanck">Занятие-8-позиционирование</a></li>
             <li><a href="lesson-9/index.html" target="blanck">Занятие-9-БЭМ</a></li>
             <li><a href="lesson-10/index.html" target="blanck">Занятие-10-формы</a></li>
+            <li><a href="lesson-11/index.html" target="blanck">Занятие-11</a> / <a href="lesson-11/task-2/index.html" target="blanck">Второе</a></li>
         </ul><hr>
     </div>
 </body>
