commit-CSS-animation&CSS-grid

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <li><a href="lesson-9/index.html" target="blanck">Занятие-9-БЭМ</a></li>
             <li><a href="lesson-10/index.html" target="blanck">Занятие-10-формы</a></li>
             <li><a href="lesson-11/index.html" target="blanck">Занятие-11</a> / <a href="lesson-11/task-2/index.html" target="blanck">Второе</a></li>
+            <li><a href="lesson-CSS-animation/index.html" target="blanck">Занятие-CSS-animation</a></li>
+            <li><a href="lesson-CSS-grid/index.html" target="blanck">Занятие-CSS-grid</a></li>
         </ul><hr>
     </div>
 </body>
